@@ -3,6 +3,7 @@ SUBDIRS = system
 realincludedir = $(includedir)/debian-installer
 
 realinclude_HEADERS = \
+	config.h \
 	exec.h \
 	hash.h \
 	list.h \
