@@ -11,11 +11,12 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
     - add -extra lib.
     - fix description parsing (closes: #219902)
     - remove some references to the chunk allocator.
+    - add version info to installed headers.
   * Petter Reinholdtsen
     - Define PATH_MAX if it is undefined, to get this building on
       GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
 
- -- Bastian Blank <waldi@debian.org>  Wed, 12 Nov 2003 18:22:47 +0100
+ -- Bastian Blank <waldi@debian.org>  Thu, 11 Dec 2003 20:27:37 +0100
 
 libdebian-installer (0.17) unstable; urgency=low
 
